--- a/Template/index.html
+++ b/Template/index.html
@@ -92,9 +92,9 @@
 <body>
     <div class="container">
         <h1>Weekly Report</h1>
-        <p>Dear [SuperAdmin], </p>
+        <p>Dear SuperAdmin, </p>
         <div class="logo">
-            <img src="https://yourcompany.com/logo.png" alt="Your Company Logo">
+            <img src="https://firebasestorage.googleapis.com/v0/b/kustoma24-8959e.appspot.com/o/navy.png?alt=media&token=6d6fdde1-3f5e-4045-ba54-5f0e0011f1f3" alt="Your Company Logo">
         </div>
         <br><br>
         <p>We are pleased to share with you our weekly report.Please find below a summary of our key metrics and perfomance indicators: </p>
